--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -47,24 +47,6 @@
         app:layout_constraintTop_toBottomOf="@+id/etlastName"
         tools:text="@tools:sample/us_phones" />
 
-    <Button
-        android:id="@+id/add_button"
-        style="@style/Widget.MaterialComponents.Button"
-        android:layout_width="171dp"
-        android:layout_height="68dp"
-        android:text="Save"
-        android:textAllCaps="false"
-        android:textColor="@color/cardview_light_background"
-        android:textColorHighlight="@android:color/holo_green_dark"
-        android:textColorLink="@android:color/holo_green_light"
-        android:textIsSelectable="false"
-        android:textScaleX="@dimen/cardview_default_elevation"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etAddress" />
-
     <EditText
         android:id="@+id/etEmail"
         android:layout_width="350dp"
@@ -106,4 +88,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.2" />
+
+    <Button
+        android:id="@+id/add_button"
+        android:layout_width="278dp"
+        android:layout_height="54dp"
+        android:background="#71A8D5"
+        android:text="Save"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etAddress" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
