--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -12,12 +12,13 @@
         android:id="@+id/etfirstName2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="72dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="Enter First Name"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.383"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="@tools:sample/first_names" />
@@ -49,31 +50,38 @@
         tools:text="@tools:sample/us_phones" />
 
     <Button
+        android:id="@+id/delete_button"
+        android:layout_width="161dp"
+        android:layout_height="71dp"
+        android:layout_marginStart="184dp"
+        android:layout_marginLeft="184dp"
+        android:layout_marginTop="56dp"
+        android:text="Delete"
+        android:textAllCaps="false"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/update_button"
+        app:layout_constraintTop_toBottomOf="@+id/etAddress2"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
         android:id="@+id/update_button"
         android:layout_width="160dp"
         android:layout_height="66dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="58dp"
+        android:layout_marginBottom="116dp"
         android:background="#4CAF50"
         android:text="Update"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/delete_button"
+        app:layout_constraintHorizontal_bias="0.063"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etAddress2" />
-
-    <Button
-        android:id="@+id/delete_button"
-        android:layout_width="161dp"
-        android:layout_height="71dp"
-        android:layout_marginTop="88dp"
-        android:text="Delete"
-        android:textAllCaps="false"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.516"
-        app:layout_constraintStart_toEndOf="@+id/update_button"
-        app:layout_constraintTop_toBottomOf="@+id/etAddress2" />
+        app:layout_constraintTop_toBottomOf="@+id/etAddress2"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/etEmail2"
@@ -83,7 +91,6 @@
         android:ems="10"
         android:hint="E-mail"
         android:inputType="textPersonName"
-        android:text="E-mail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,10 +102,10 @@
         android:layout_height="111dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:hint="Address"
         android:inputType="textPersonName"
-        android:text="Address"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etEmail2" />
 
@@ -106,12 +113,22 @@
         android:id="@+id/textView"
         android:layout_width="225dp"
         android:layout_height="42dp"
+        android:layout_marginTop="16dp"
         android:text="Update Contact"
         android:textColor="#F1F1F1"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.672"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="62dp"
+        android:layout_height="56dp"
+        app:srcCompat="@android:drawable/ic_menu_edit"
+        tools:layout_editor_absoluteX="6dp"
+        tools:layout_editor_absoluteY="16dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
